# aiBuddy

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_MD_ADDITION.md  README.md  REFACTOR_PLAN.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: audit_workflow.py  audit_workflow_integration.py  context_builder_workflow.py  mapping_workflow.py  optimize_workflow.py  requirements_workflow.py
backend/app/api/: schemas.py  sse.py  streaming.py
backend/app/core/: auth.py  config.py  llm.py
backend/app/db/: auth_models.py  engine.py  hierarchy_models.py  models.py  queries.py  requirements_models.py  types.py
backend/app/lifecycle/: __init__.py  audit_adapter.py  conflict_service.py  glossary_adapter.py  graph_adapter.py  interface.py  promotion_service.py  requirements_adapter.py
backend/migrations/: env.py
backend/tests/: conftest.py  mapping_helpers.py  test_artifact_visibility.py  test_audit_integration.py  test_auth.py  test_conflicts.py  test_hierarchy.py  test_m1_context.py  test_m1_e2e.py  test_m1_lifecycle.py  test_m1_m2_integration.py  test_m1_manual.py  test_mapping.py  test_mapping_extended.py  test_migration_006.py  test_migration_009.py  test_projects.py  test_promotion.py  test_rag_ready_isolation.py  test_reflection.py  test_requirements.py  test_requirements_extended.py  test_requirements_rag_quality.py  test_snapshots.py  test_versioning.py  test_versioning_promotion.py  test_work_context_schema.py  test_work_contexts.py
(+209 files in other folders)
