[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mateusz Psujek", email = "mpsujek@sii.pl"},
    {name = "Tomasz Kuran", email = "tkuran@sii.pl"},
    {name = "Krzysztof Bednarski", email = "kbednarski@sii.pl"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "llama-index-core>=0.12.0",
    "llama-index-llms-bedrock-converse>=0.3.0",
    "llama-index-llms-anthropic>=0.10.0",
    "llama-index-embeddings-bedrock>=0.3.0",
    "llama-index-embeddings-huggingface>=0.5.0",
    "llama-index-vector-stores-chroma>=0.3.0",
    "llama-index-readers-file>=0.3.0",
    "chromadb>=0.5.0",
    "boto3>=1.35.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "pypdf>=4.3.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
    "alembic>=1.18.4",
]

requires-python = ">=3.10"
readme = "README.md"
license = {text = "Proprietary"}


[tool.pdm]
distribution = false

[tool.pdm.resolution.overrides]
onnxruntime = "==1.23.2"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
